Dropping unsharded collection fails to synchronize with a concurrent shardCollection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.8
    • Affects Version/s: 3.5.6
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2017-05-08
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently the sharded collection drop code path branches for sharded or unsharded collections when in practice there is no reason why it should not be the same for both.

      This causes race conditions between dropping an unsharded collection and sharding the same collection concurrently, because dropping the unsharded collection will not take the distributed lock.

      Making both of them go through the catalog client also helps with moving that command to the config server primary.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: