SERVER-29017 Get rid of ShardingCatalogClient::updateCollection