src/mongo/s/catalog/sharding_catalog_write_retry_test.cpp
@@ -316,6 +316,153 @@ TEST_F(InsertRetryTest, DuplicateKeyErrorAfterWriteConcernFailureMatch) {
     future.timed_get(kFutureTimeout);
 }
 
+TEST_F(UpdateRetryTest, Success) {
+    configTargeter()->setFindHostReturnValue(HostAndPort("TestHost1"));
+
+    BSONObj objToUpdate = BSON("_id" << 1 << "Value"
+                                     << "TestValue");
+    BSONObj updateExpr = BSON("$set" << BSON("Value"
+                                             << "NewTestValue"));
+
+    auto future = launchAsync([&] {
+        auto status =
+            catalogClient()->updateConfigDocument(operationContext(),
+                                                  kTestNamespace.ns(),
+                                                  objToUpdate,
+                                                  updateExpr,
+                                                  false,
+                                                  ShardingCatalogClient::kMajorityWriteConcern);
+        ASSERT_OK(status);
+    });
+
+    onCommand([&](const RemoteCommandRequest& request) {
+        BatchedUpdateRequest actualBatchedUpdate;
+        std::string errmsg;
+        ASSERT_TRUE(actualBatchedUpdate.parseBSON(request.dbname, request.cmdObj, &errmsg));
+        ASSERT_EQUALS(kTestNamespace.ns(), actualBatchedUpdate.getNS().ns());
+
+        BatchedCommandResponse response;
+        response.setOk(true);
+        response.setNModified(1);
+
+        return response.toBSON();
+    });
+
+    future.timed_get(kFutureTimeout);
+}
+
+TEST_F(UpdateRetryTest, NotMasterErrorReturnedPersistently) {
+    configTargeter()->setFindHostReturnValue(HostAndPort("TestHost1"));
+
+    BSONObj objToUpdate = BSON("_id" << 1 << "Value"
+                                     << "TestValue");
+    BSONObj updateExpr = BSON("$set" << BSON("Value"
+                                             << "NewTestValue"));
+
+    auto future = launchAsync([&] {
+        auto status =
+            catalogClient()->updateConfigDocument(operationContext(),
+                                                  kTestNamespace.ns(),
+                                                  objToUpdate,
+                                                  updateExpr,
+                                                  false,
+                                                  ShardingCatalogClient::kMajorityWriteConcern);
+        ASSERT_EQUALS(ErrorCodes::NotMaster, status);
+    });
+
+    for (int i = 0; i < 3; ++i) {
+        onCommand([](const RemoteCommandRequest& request) {
+            BatchedCommandResponse response;
+            response.setOk(false);
+            response.setErrCode(ErrorCodes::NotMaster);
+            response.setErrMessage("not master");
+
+            return response.toBSON();
+        });
+    }
+
+    future.timed_get(kFutureTimeout);
+}
+
+TEST_F(UpdateRetryTest, NotMasterReturnedFromTargeter) {
+    configTargeter()->setFindHostReturnValue(Status(ErrorCodes::NotMaster, "not master"));
+
+    BSONObj objToUpdate = BSON("_id" << 1 << "Value"
+                                     << "TestValue");
+    BSONObj updateExpr = BSON("$set" << BSON("Value"
+                                             << "NewTestValue"));
+
+    auto future = launchAsync([&] {
+        auto status =
+            catalogClient()->updateConfigDocument(operationContext(),
+                                                  kTestNamespace.ns(),
+                                                  objToUpdate,
+                                                  updateExpr,
+                                                  false,
+                                                  ShardingCatalogClient::kMajorityWriteConcern);
+        ASSERT_EQUALS(ErrorCodes::NotMaster, status);
+    });
+
+    future.timed_get(kFutureTimeout);
+}
+
+TEST_F(UpdateRetryTest, NotMasterOnceSuccessAfterRetry) {
+    HostAndPort host1("TestHost1");
+    HostAndPort host2("TestHost2");
+    configTargeter()->setFindHostReturnValue(host1);
+
+    CollectionType collection;
+    collection.setNs(NamespaceString("db.coll"));
+    collection.setUpdatedAt(network()->now());
+    collection.setUnique(true);
+    collection.setEpoch(OID::gen());
+    collection.setKeyPattern(KeyPattern(BSON("_id" << 1)));
+
+    BSONObj objToUpdate = BSON("_id" << 1 << "Value"
+                                     << "TestValue");
+    BSONObj updateExpr = BSON("$set" << BSON("Value"
+                                             << "NewTestValue"));
+
+    auto future = launchAsync([&] {
+        ASSERT_OK(
+            catalogClient()->updateConfigDocument(operationContext(),
+                                                  kTestNamespace.ns(),
+                                                  objToUpdate,
+                                                  updateExpr,
+                                                  false,
+                                                  ShardingCatalogClient::kMajorityWriteConcern));
+    });
+
+    onCommand([&](const RemoteCommandRequest& request) {
+        ASSERT_EQUALS(host1, request.target);
+
+        BatchedCommandResponse response;
+        response.setOk(false);
+        response.setErrCode(ErrorCodes::NotMaster);
+        response.setErrMessage("not master");
+
+        // Ensure that when the catalog manager tries to retarget after getting the
+        // NotMaster response, it will get back a new target.
+        configTargeter()->setFindHostReturnValue(host2);
+        return response.toBSON();
+    });
+
+    onCommand([&](const RemoteCommandRequest& request) {
+        BatchedUpdateRequest actualBatchedUpdate;
+        std::string errmsg;
+        ASSERT_TRUE(actualBatchedUpdate.parseBSON(request.dbname, request.cmdObj, &errmsg));
+        ASSERT_EQUALS(kTestNamespace.ns(), actualBatchedUpdate.getNS().ns());
+
+        BatchedCommandResponse response;
+        response.setOk(true);
+        response.setNModified(1);
+
+        return response.toBSON();
+    });
+
+    future.timed_get(kFutureTimeout);
+}
+
 TEST_F(UpdateRetryTest, OperationInterruptedDueToPrimaryStepDown) {
     configTargeter()->setFindHostReturnValue({kTestHosts[0]});
 
